# Bot-Host-Manager

./: .replit  RENDER_GUIDE.md  build.sh  pnpm-lock.yaml  pyproject.toml  render.yaml  replit.md
.agents/memory/: MEMORY.md  bcrypt-passlib-incompatibility.md  neon-database-url-key.md  python-jose-blocked.md
artifacts/api-server/: package.json  requirements.txt  start.sh
artifacts/api-server/app/: __init__.py  main.py
artifacts/api-server/app/api/routes/: audit.py  auth.py  bot.py  bot_data.py  config.py  env_vars.py  files.py  health.py  logs.py  metrics.py
artifacts/api-server/app/api/websockets/: console.py  metrics.py
artifacts/api-server/app/core/: config.py  database.py  security.py
artifacts/api-server/app/models/: __init__.py  audit_log.py  bot_config.py  bot_data.py  env_var.py  log_entry.py  user.py
artifacts/api-server/app/services/: bot_manager.py  default_bot_files.py  env_service.py  metrics_service.py  r2_service.py  r2_storage.py
artifacts/discord-panel/: index.html  package.json  vite.config.ts
artifacts/discord-panel/.replit-artifact/: artifact.toml
artifacts/discord-panel/src/: App.tsx  index.css
artifacts/discord-panel/src/components/: layout.tsx
artifacts/discord-panel/src/hooks/: use-protected-route.ts
artifacts/discord-panel/src/lib/: auth.tsx
artifacts/discord-panel/src/pages/: console.tsx  dashboard.tsx  env-vars.tsx  files.tsx  login.tsx  settings.tsx
lib/api-spec/: openapi.yaml
