[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "boto3>=1.43.51",
    "cryptography>=49.0.0",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.10",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]
